--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         xcode: # 15.0.1, 14.3.1, 14.2, 14.1 - default of 14.3.1
           - { version: '15.0', simulator: 'platform=iOS Simulator,OS=17.0.1,name=iPhone 14', sdk: 'iphonesimulator17.0' }
+          - { version: '15.0', simulator: 'generic/platform=ios', sdk: 'iphonesimulator17.0' }
     steps:
       - uses: actions/checkout@v3
       - name: list the available versions of Xcode
